--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>web application</title>
     </head>
     <body>
-        <h1>application</h1>
+        <h1>Application!!</h1>
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="service.html">Service</a>
