--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Application!!</h1>
-        <h2>welcome</h2>
+        <h2>welcome!!</h2>
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="service.html">Service</a>
